ByteBufferCleaner to check Unsafe access in Java 23+
In Java 23+, ByteBufferCleaner should check for access
to deprecated memory-access methods in sun.misc.Unsafe